table alignment temporary fix

--- a/gym-client/src/components/ScheduleTable/style.css
+++ b/gym-client/src/components/ScheduleTable/style.css
@@ -5,11 +5,16 @@ div .center {
 
 table {
     border-collapse: collapse;
+    table-layout: fixed;
 }
 
 table, th, td {
     vertical-align: top;
     padding: 3px;
+}
+
+table td {
+    padding-left: 20px;
 }
 
 .responsive-table {
@@ -23,6 +28,7 @@ table, th, td {
 
 .table-header th {
     line-height: 40px;
-    width: 17%;
+    /* width: 18%; */
+    padding-left: 20px;
     color: white;
 }
